# memory_pool

./: CMakeLists.txt  CMakePresets.json  LICENSE
lib/: CMakeLists.txt
lib/memory_pool/: CMakeLists.txt
lib/memory_pool/include/: memory_pool.h
lib/memory_pool/src/: memory_pool.c
src/: main.c
